--- a/continuum_mechanics_and_finite_element_method.tex
+++ b/continuum_mechanics_and_finite_element_method.tex
@@ -285,6 +285,21 @@ and $\mat \sigma_d$ is the deviatoric stress defined as
     \sigma_d \equiv \mat \sigma - p\mat I.
 \end{equation}
 
+\section{Heat}
+
+Changes in temperature of a body are very often related to heat flowing inside, entering or leaving it.
+In continuum mechanics, heat is measured in power per unit surface.
+
+\subsubsection{Heat flux vector}
+
+According to Cauchy's theorem the relation between the heat flux across a surface, \(h(\bm x, \bm n)\), and the unitary outward normal to the deformed surface under analysis, \(\bm n\), is linear and given by
+\begin{highlight}
+  \begin{equation}
+    h(\bm x, \bm n ) = -\bm q(\bm x)\cdot \bm n.
+  \end{equation}
+\end{highlight}
+where \(\bm q\) is the heat flux vector.
+
 \section{Fundamental conservation principles}
 
 In Continuum Mechanics. there is a set of conservation principles and thermodynamic laws, that irrespective of the quantities used to describe the mechanical behavior of a body undergoing large deformations must always be satisfied.
@@ -333,17 +348,31 @@ Equations \eqref{eq:material_equilibrium} and \eqref{eq:spatial_equilibrium} are
 \subsection{First principle of thermodynamics}
 
 Let \(e\) be the internal energy per unit mass, \(r\) the heat supply per unit mass and \(\bm q\) the heat flux, then the first principle of thermodynamics pertaining to the balance of energy can be written in the spatial description as
+\begin{highlight}
 \begin{equation} \label{eq:first_principle_thermo}
-    \rho\dot e = \mat \sigma\;:\;\mat D + \rho r -\text{div}\;\vect q,
+  \begin{cases}
+    \rho\dot e = \mat \sigma\;:\;\mat D + \rho r -\text{div}\;\vect q,\quad &\forall \bm x\in\Omega,\\
+    \bm t = \bm \sigma \bm n,\quad &\forall \bm x\in \partial \Omega,\\
+    h = \bm q \cdot \bm n,\quad &\forall \bm x\in \partial \Omega.
+  \end{cases}
 \end{equation}
+\end{highlight}
 The second order tensor $\mat D$ denotes a strain rate measure, such that the double contraction $\mat \sigma\colon\mat D$ represents the stress power per unit volume in the deformed configuration of body.
 In material coordinates, it reads
 \begin{equation}
- \rho_0 \dot e = \bm P :\dot F + \rho_0 r -\operatorname{div}_0 \bm q_0,
+  \begin{cases}
+ \rho_0 \dot e = \bm P :\dot{\bm F} + \rho_0 r -\operatorname{div}_0 \bm q_0,\quad& \forall \bm X\in\Omega_0,\\
+ \bm t_0 = \bm P\bm m,\quad&\forall \bm X\in\partial \Omega_0,\\
+ h_0 = \bm q_0\cdot\bm m,\quad&\forall \bm X\in\partial \Omega_0,
+  \end{cases}
 \end{equation}
 where \(\bm q_0\) is the Piola transformation of \(\bm q\), i.e.,
 \begin{equation}
-  \bm q_0 = J \bm F^{-T} \bm q.
+  \bm q_0 = J \bm F^{-T} \bm q,
+\end{equation}
+and
+\begin{equation}
+  h_0 = J h.
 \end{equation}
 
 
@@ -498,7 +527,7 @@ For each internal variable $\alpha_k$ of the set $\alpha$ of internal variables,
 so that the Clausius-Duhem equation can be written in a reduced form as
 \begin{highlight}
     \begin{equation}
-        -A*\dot{\vect \alpha} - \frac{J}{\theta}\vect q\cdot \vect g\geq 0,
+        -\bm A*\dot{\vect \alpha} - \frac{J}{\theta}\vect q\cdot \vect g\geq 0,
     \end{equation}
 \end{highlight}
 where $\vect A$ is the set of conjugate thermodynamical forces and \(*\) denotes the appropriate product operation.
